# m_flow

./: .coderabbit.yaml  .dockerignore  .env.template  .gitattributes  .gitguardian.yml  .gitignore  .mergify.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  Makefile  NOTICE  NOTICE.md  README.md  SECURITY.md  alembic.ini  conftest.py  docker-compose.yml  entrypoint.sh  pyproject.toml  quickstart.ps1  quickstart.sh
.github/: CODEOWNERS  core-team.txt  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: approve_dco.yaml  backend_docker_build_test.yml  basic_tests.yml  clean_stale_pr.yaml  cli_tests.yml  community_greetings.yml  db_examples_tests.yml  disable_independent_workflows.sh  distributed_test.yml  docker_compose.yml  dockerhub-mcp.yml  dockerhub.yml  e2e_tests.yml  examples_tests.yml  graph_db_tests.yml  label-core-team.yml  load_tests.yml  notebooks_tests.yml  pr_lint  pre_test.yml  relational_db_migration_tests.yml  release.yml  release_test.yml  reusable_notebook.yml  scorecard.yml  search_db_tests.yml  sync-upstream.yml  temporal_graph_tests.yml  test_different_operating_systems.yml  test_llms.yml  test_mcp.yml  test_ollama.yml  test_s3_file_storage.yml  test_suites.yml  update-contributors.yml  vector_db_tests.yml  weighted_edges_tests.yml
alembic/: env.py
alembic/versions/: 92b3293baa66_mflow_initial_schema.py
coreference/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
coreference/configs/: config.yaml
coreference/coreference_module/: README.md  __init__.py  canonicalizer.py  coreference.py  ner_adapter.py  syntax_adapter.py  time_normalizer.py  tokenizer.py
coreference/data/: dev_expanded.json  test.json  train_final.json
coreference/english_coreference/: README.md  __init__.py  coreference.py  ner_adapter.py  tokenizer.py
coreference/tests/: conftest.py  test_coref_branches.py  test_coref_golden.py  test_english_golden.py  test_time_golden.py  test_tokenizer_golden.py
deployment/helm/: Chart.yaml  Dockerfile  README.md  docker-compose-helm.yml  values.yaml
docs/: BENCHMARK_REPRODUCTION.md  CUSTOM_LLM_PROVIDERS.md  RETRIEVAL_ARCHITECTURE.md  RETRIEVAL_ARCHITECTURE_ZH.md
examples/: episodic_stage1_smoke_test.py  episodic_stage2_smoke_test.py  episodic_stage3_smoke_test.py  episodic_stage4_smoke_test.py  episodic_stage5_smoke_test.py  episodic_stage5_v2_smoke_test.py  start_ui_example.py  test_15_events.py  test_20_diverse_events.py  test_comprehensive_episodic.py  test_episodic_20chunks.py  test_episodic_precision.py  test_llm_router.py  test_retrieval_15events.py  test_retrieval_fast.py  test_retrieval_quick.py  test_stage1_verification.py  test_stage2_verification.py
examples/data/: car_and_tech_companies.txt
examples/database_examples/: chromadb_example.py  kuzu_example.py  neo4j_example.py  neptune_analytics_example.py  pgvector_example.py
examples/low_level/: companies.json  customers.json  people.json  pipeline.py  product_recommendation.py
examples/python/: agentic_reasoning_procurement_example.py  dynamic_multiple_edges_example.py  dynamic_steps_example.py  m_flow_simple_document_demo.py  multimedia_example.py  permissions_example.py  relational_database_migration_example.py  run_custom_pipeline_example.py  simple_example.py  simple_node_set_example.py  web_url_fetcher_example.py  weighted_edges_example.py
examples/relational_db_with_dlt/: fix_foreign_keys.sql  relational_db_and_dlt.py
licenses/: README.md
m_flow/: __init__.py  __main__.py  base_config.py  context_global_variables.py  low_level.py  pipelines.py  root_dir.py  version.py
m_flow-frontend/: .env.example  .gitignore  Dockerfile  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
m_flow-frontend/e2e/: health.spec.ts
m_flow-mcp/: CHANGELOG.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml  test_e2e.sh
m_flow-mcp/src/: __init__.py  client.py  m_flow_client.py  server.py  test_client.py  test_e2e_real.py  test_integration.py
m_flow-starter-kit/: .env.template  .gitignore  README.md  pyproject.toml
m_flow/api/: .env.example  DTO.py  client.py  health.py
m_flow/auth/: __init__.py  get_fastapi_users.py  get_user_db.py  get_user_manager.py  security_check.py
m_flow/cli/: __init__.py  app.py  config.py  debug.py  echo.py  exceptions.py  reference.py
m_flow/config/: __init__.py  config.py  env_compat.py  env_registry.py  presets.py
m_flow/core/: __init__.py
m_flow/debug/: __init__.py  __main__.py  procedure_cli.py  trace_cli.py
m_flow/eval/: __init__.py  __main__.py  config.py  loader.py  metrics.py  report.py  runner.py
m_flow/exceptions/: __init__.py  exceptions.py
m_flow/llm/: LLMGateway.py  __init__.py  config.py  exceptions.py  utils.py
m_flow/pipeline/: __init__.py
m_flow/preprocessing/: __init__.py
m_flow/retrieval/: __init__.py  base_graph_retriever.py  base_retriever.py  cypher_search_retriever.py  episodic_retriever.py  jaccard_retrival.py  lexical_retriever.py  memory_orchestrator.py  procedural_retriever.py  registered_community_retrievers.py  unified_triplet_search.py
m_flow/shared/: __init__.py  cache.py  data_models.py  llm_concurrency.py  logging_utils.py  rate_limiting.py  utils.py
m_flow/storage/: __init__.py  add_memory_nodes.py  episode_metadata.py  index_graph_links.py  index_memory_nodes.py
m_flow/tests/: test_add_docling_document.py  test_advanced_pdf_loader.py  test_chromadb.py  test_concurrent_subprocess_access.py  test_conversation_history.py  test_custom_model.py  test_data_setup.py  test_dataset_database_handler.py  test_dataset_delete.py  test_deduplication.py  test_delete_by_id.py  test_s3.py  (+24 more)
mflow_workers/: Dockerfile  app.py  entrypoint.py  entrypoint.sh  modal_image.py  queues.py  signal.py  test.py  utils.py
scripts/: manage_service.sh  migrate_created_at.py  migrate_lancedb_created_at.py
(+996 files in other folders)
