# M-flow MCP Server — Model Context Protocol integration
# Exposes M-flow knowledge graph operations via MCP

[project]
name = "m_flow-mcp"
version = "0.6.0"
description = "MCP server for M-flow knowledge graph — enables AI assistants to query and update M-flow graphs"
requires-python = ">=3.10"

dependencies = [
    "m_flow>=0.5.0",
    "mcp>=1.0.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
all = [
    "m_flow[postgres,neo4j]>=0.5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
